src/test/deca/context/valid/class/53-returnAbsent.deca
/* Description:
    teste la regle (3.24)  de la vérification contextuelles
    Le type de retour de la méthode est absent

    Historique:
      cree le 22/01/2020
*/

class A {
  int a;
  float b;
  int methode(int d, float e){
    int a;
    // le return est absent
  }

}
